--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2018">
+    Principles of Programming Languages, POPL 2018</a>
+    (Artefact Evaluation Co-Chair)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <li>Submission deadline: 7 July 2017</li>
+  <li>Conference: 8-13 January 2018, Los Angeles</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
     European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
     (General Chair)
