--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2018">
     Principles of Programming Languages, POPL 2018</a>
-    (Artefact Evaluation Co-Chair)
+    (Artifact Evaluation Co-Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 7 July 2017</li>
