--- a/index.html
+++ b/index.html
@@ -375,6 +375,35 @@ MPRI website</a>.</p>
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    Niklas Grimm,
+    Kenji Maillard,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Matteo Maffei,
+    Jonathan Protzenko,
+    Aseem Rastogi,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
+    arXiv:1703.00055, February 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Karthikeyan Bhargavan,
+    Antoine Delignat-Lavaud,
+    C\'edric Fournet,
+    C\u{a}t\u{a}lin Hri\c{t}cu,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    Peng Wang,
+    Santiago Zanella-B\'eguelin, and
+    Jean-Karim Zinzindohou\'e.
+    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
+    arXiv:1703.00053. February 2017.
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Danel Ahman,
