--- a/index.html
+++ b/index.html
@@ -392,15 +392,15 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
     Karthikeyan Bhargavan,
     Antoine Delignat-Lavaud,
-    C\'edric Fournet,
-    C\u{a}t\u{a}lin Hri\c{t}cu,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
     Jonathan Protzenko,
     Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy,
     Peng Wang,
-    Santiago Zanella-B\'eguelin, and
-    Jean-Karim Zinzindohou\'e.
+    Santiago Zanella-Béguelin, and
+    Jean-Karim Zinzindohoué.
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
     arXiv:1703.00053. February 2017.
   </li>
