--- a/publications.html
+++ b/publications.html
@@ -335,6 +335,36 @@
 <ol start="25" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Niklas Grimm,
+    Kenji Maillard,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Matteo Maffei,
+    Jonathan Protzenko,
+    Aseem Rastogi,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
+    arXiv:1703.00055, February 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Karthikeyan Bhargavan,
+    Antoine Delignat-Lavaud,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    Peng Wang,
+    Santiago Zanella-Béguelin, and
+    Jean-Karim Zinzindohoué.
+    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
+    arXiv:1703.00053. February 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim,
