--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
+  <li style="margin-bottom: 1ex;"><a href="">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
+  <ul>
+  <li>Seminar: May 13-18, 2018, Dagstuhl</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2018">
     Principles of Programming Languages, POPL 2018</a>
     (Artifact Evaluation Co-Chair)
