--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
   <ul>
-  <li>Seminar: May 13-18, 2018, Dagstuhl</li>
+  <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
