--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
+  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
   <ul>
   <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
   </ul>
