--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><b>Recent:</b> <em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
+      <li><a href="">LRI</a> seminar: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li>
