--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,8 @@
     David Pichardie,
     Benjamin C. Pierce,
     Randy Pollack, and
-    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Accepted in Special Issue of the Journal of Computer Security on Verified Information Flow Security, 24(6):689--734, December 2016.
+    Andrew Tolmach. <b><a href="http://arxiv.org/abs/1509.06503">A Verified Information-Flow Architecture</a></b>. Journal of Computer Security (JCS);
+Special Issue on Verified Information Flow Security, 24(6):689--734, December 2016.
   <ul style="font-size: small">
     <li><a href="https://github.com/micro-policies/verified-ifc">Coq proofs</a></li>
   </ul>
