--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@ Research Cambridge</a>.</p>
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.ieee-security.org/TC/EuroSP2017/">
+    European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
+    (General Chair)</b>
+  <ul>
+  <!-- <li>Submission deadline: 4 August 2016</li> -->
+  <li>Conference: 26-28 April 2017, Paris, France</li>
+  </ul>
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li> -->
@@ -93,15 +102,6 @@ Research Cambridge</a>.</p>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <li>Submission deadline: 7 July 2017</li>
   <li>Conference: 8-13 January 2018, Los Angeles</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
-    European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
-    (General Chair)
-  <ul>
-  <!-- <li>Submission deadline: 4 August 2016</li> -->
-  <li>Conference: 26-28 April 2017, Paris, France</li>
   </ul>
   </li>
 
