--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
     <ul style="font-size: small">
       <li><b>Upcoming:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université d'Auvergne</a> (Clermont-Ferrand, 2017-04-06)</li>
-      <li><b>Recent:</b> <a href="https://vals.lri.fr/">LRI VALS</a> seminar: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
+      <li><b>Recent:</b> <a href="https://vals.lri.fr/">LRI VALS</a> seminar: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (University Paris-Sud, 2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
       <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li>
