--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Research Cambridge</a>.</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Fresh:</b> Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><b><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></b>, August 2016
+  <li style="margin-bottom: 1ex;">Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><b><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></b>, August 2016
     <ul>
       <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions on ERC SECOMP</a>:</b>
       Looking for outstanding students and young researchers for
