--- a/index.html
+++ b/index.html
@@ -331,9 +331,7 @@ MPRI website</a>.</p>
       memory safety,
       compartmentalization,
       dynamic monitoring,
-      integrity,
-      information flow,
-      security protocols</li>
+      integrity</li>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
       type systems,
