--- a/index.html
+++ b/index.html
@@ -89,14 +89,21 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</b></a> (Invited Speaker)
+  <ul>
+  <li>Conference: June 19-21 2017, University of Kent, Canterbury, UK</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
   <ul>
   <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2018">
-    Principles of Programming Languages, POPL 2018</a>
+  <li style="margin-bottom: 1ex;"><b><a href="http://conf.researchr.org/home/POPL-2018">
+    Principles of Programming Languages, POPL 2018<b></a>
     (Artifact Evaluation Co-Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
