--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;">Awarded <b><a href="https://erc.europa.eu/funding-and-grants/funding-schemes/starting-grants">ERC Starting Grant</a></b> on<br/><b><a href="https://secure-compilation.github.io/">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a></b>, August 2016
     <ul>
-      <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions on ERC SECOMP</a>:</b>
+      <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions</a>:</b>
       Looking for outstanding students and young researchers for
       Research Internship, PhD Student, PostDoc, Starting Researcher,
       <br/>and Research Engineer positions at Inria Paris</li>
@@ -103,7 +103,7 @@ Research Cambridge</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://conf.researchr.org/home/POPL-2018">
-    Principles of Programming Languages, POPL 2018<b></a>
+    Principles of Programming Languages, POPL 2018</b></a>
     (Artifact Evaluation Co-Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
