--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Research Cambridge</a>.</p>
       <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions</a>:</b>
       Looking for outstanding students and young researchers for
       Research Internship, PhD Student, PostDoc, Starting Researcher,
-      <br/>and Research Engineer positions at Inria Paris</li>
+      and Research Engineer positions at Inria Paris</li>
     </ul>
   </li>
 
