--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ Research Cambridge</a>.</p>
     <ul>
       <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions</a>:</b>
       Looking for outstanding students and young researchers for
-      Research Internship, PhD Student, PostDoc, Starting Researcher,
-      and Research Engineer positions at Inria Paris</li>
+      Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris</li>
     </ul>
   </li>
 
