--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust,
-      POST 2017</a> (PC member)
-  <ul>
-  <!-- <li>Abstract deadline: 14 October 2016</li> -->
-  <!-- <li>Submission deadline: 21 October 2016</li> -->
-  <li>Conference: 23-29 April 2017, Uppsala, Sweden</li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust, -->
+  <!--     POST 2017</a> (PC member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li>Abstract deadline: 14 October 2016</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 21 October 2016</li> -\-> -->
+  <!-- <li>Conference: 23-29 April 2017, Uppsala, Sweden</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
   <ul>
