--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ Research Cambridge</a>.</p>
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;">Teaching <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a> at<br/><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
-  </li>
+  <!-- <li style="margin-bottom: 1ex;">Teaching <a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a> at<br/><a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017 -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;">Visiting researcher at <a href="http://research.microsoft.com/en-us/groups/rise/">Microsoft Research Redmond</a>, October - November 2016 -->
   <!-- </li> -->
