--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Intern)</li>
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="">Théo Laurent</a> (Intern, ENS Paris)</li> -->
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
 
 </ul>
 
