--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visitor, University of Virginia)</li>
+
 </ul>
 
 <p>For a complete list of past students please look <a href="students.html">here</a>.</p>
