--- a/index.html
+++ b/index.html
@@ -390,6 +390,33 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+     Karthikeyan Bhargavan,
+     Barry Bond,
+     Antoine Delignat-Lavaud,
+     Cédric Fournet,
+     Chris Hawblitzel,
+     Catalin Hritcu,
+     Samin Ishtiaq,
+     Markulf Kohlweiss,
+     Rustan Leino,
+     Jay Lorch,
+     Kenji Maillard,
+     Jianyang Pang,
+     Bryan Parno,
+     Jonathan Protzenko,
+     Tahina Ramananandro,
+     Ashay Rane,
+     Aseem Rastogi,
+     Nikhil Swamy,
+     Laure Thompson,
+     Peng Wang,
+     Santiago Zanella-Béguelin, and
+     Jean-Karim Zinzindohou\'e.
+    <b><a href="http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf">Everest: Towards a Verified, Drop-in Replacement of HTTPS</a></b>.
+    2nd Summit on Advances in Programming Languages (SNAPL), May 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Niklas Grimm,
     Kenji Maillard,
     Cédric Fournet,
