--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ MPRI website</a>.</p>
      Laure Thompson,
      Peng Wang,
      Santiago Zanella-Béguelin, and
-     Jean-Karim Zinzindohou\'e.
+     Jean-Karim Zinzindohoué.
     <b><a href="http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf">Everest: Towards a Verified, Drop-in Replacement of HTTPS</a></b>.
     2nd Summit on Advances in Programming Languages (SNAPL), May 2017.
   </li>
