--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ MPRI website</a>.</p>
      Antoine Delignat-Lavaud,
      Cédric Fournet,
      Chris Hawblitzel,
-     Catalin Hritcu,
+     C&#259;t&#259;lin Hri&#355;cu,
      Samin Ishtiaq,
      Markulf Kohlweiss,
      Rustan Leino,
