--- a/index.html
+++ b/index.html
@@ -614,6 +614,10 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
+      <li><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a> Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
+    </ul>
+
+    <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
       <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
