--- a/index.html
+++ b/index.html
@@ -611,11 +611,15 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
+  <li style="margin-bottom: 1ex;"><em>European Symposium on Security and Privacy</em></a> 
 
     <ul style="font-size: small">
       <li><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a> Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
     </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
