--- a/index.html
+++ b/index.html
@@ -611,10 +611,10 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>European Symposium on Security and Privacy</em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
 
     <ul style="font-size: small">
-      <li><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a> Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
+      <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
     </ul>
 
   </li>
