--- a/index.html
+++ b/index.html
@@ -390,17 +390,19 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    Niklas Grimm,
-    Kenji Maillard,
+    Karthikeyan Bhargavan,
+    Antoine Delignat-Lavaud,
     Cédric Fournet,
     C&#259;t&#259;lin Hri&#355;cu,
-    Matteo Maffei,
     Jonathan Protzenko,
+    Tahina Ramananandro,
     Aseem Rastogi,
-    Nikhil Swamy, and
-    Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
-    arXiv:1703.00055, February 2017.
+    Nikhil Swamy,
+    Peng Wang,
+    Santiago Zanella-Béguelin, and
+    Jean-Karim Zinzindohoué.
+    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
+    . February 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -429,21 +431,18 @@ MPRI website</a>.</p>
     <b><a href="http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf">Everest: Towards a Verified, Drop-in Replacement of HTTPS</a></b>.
     2nd Summit on Advances in Programming Languages (SNAPL), May 2017.
   </li>
-
   <li style="margin-bottom: 1ex;">
-    Karthikeyan Bhargavan,
-    Antoine Delignat-Lavaud,
+    Niklas Grimm,
+    Kenji Maillard,
     Cédric Fournet,
     C&#259;t&#259;lin Hri&#355;cu,
+    Matteo Maffei,
     Jonathan Protzenko,
-    Tahina Ramananandro,
     Aseem Rastogi,
-    Nikhil Swamy,
-    Peng Wang,
-    Santiago Zanella-Béguelin, and
-    Jean-Karim Zinzindohoué.
-    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
-    arXiv:1703.00053. February 2017.
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
+    arXiv:1703.00055, February 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
