--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@ MPRI website</a>.</p>
     Santiago Zanella-Béguelin, and
     Jean-Karim Zinzindohoué.
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
-    . February 2017.
+    In 22nd ACM SIGPLAN International Conference on
+    Functional Programming, September 2017. To appear.
   </li>
 
   <li style="margin-bottom: 1ex;">
