--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ MPRI website</a>.</p>
     Jean-Karim Zinzindohoué.
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
     In 22nd ACM SIGPLAN International Conference on
-    Functional Programming, September 2017. To appear.
+    Functional Programming (ICFP), September 2017. To appear.
   </li>
 
   <li style="margin-bottom: 1ex;">
