--- a/index.html
+++ b/index.html
@@ -390,6 +390,18 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Arthur Azevedo de Amorim,
+            C&#259;t&#259;lin Hri&#355;cu, and
+            Benjamin C. Pierce.
+    <b><a href="">The Meaning of Memory Safety</a></b>.
+          arXiv:, May 2017.
+  <ul style="font-size: small">
+    <li>A previous draft was entitled
+        Alpha is for Address! The Essence of Memory Safety</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Karthikeyan Bhargavan,
     Antoine Delignat-Lavaud,
     Cédric Fournet,
