--- a/students.html
+++ b/students.html
@@ -68,7 +68,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now at <a href="http://software.imdea.org/">IMDEA Software Institute</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/xia/">Li-yao Xia</a>
+  <li style="margin-bottom: 1ex;"><a href="https://poisson.chat/">Li-yao Xia</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-04 to 2015-08:
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
