--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
-            Benjamin C. Pierce.
+            Benjamin C. Pierce.<br/>
     <b><a href="">The Meaning of Memory Safety</a></b>.
           arXiv:, May 2017.
   <ul style="font-size: small">
