--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ MPRI website</a>.</p>
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
     <b><a href="">The Meaning of Memory Safety</a></b>.
-          arXiv:, May 2017.
+            May 2017.
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
