--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Research Cambridge</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.ieee-security.org/TC/EuroSP2017/">
-    European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
+    IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
     (General Chair)</b>
   <ul>
   <!-- <li>Submission deadline: 4 August 2016</li> -->
