--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting at POPL 2017</a> (Co-organizer)
   <ul>
-  <li>Conference: 15 January 2017, Paris, France</li>
+  <li>Meeting: 15 January 2017, Paris, France</li>
   </ul>
   </li>
 
