--- a/index.html
+++ b/index.html
@@ -74,15 +74,6 @@ Research Cambridge</a>.</p>
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.ieee-security.org/TC/EuroSP2017/">
-    IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
-    (General Chair)</b>
-  <ul>
-  <!-- <li>Submission deadline: 4 August 2016</li> -->
-  <li>Conference: 26-28 April 2017, Paris, France</li>
-  </ul>
-  </li>
-
   <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li> -->
@@ -136,6 +127,15 @@ Research Cambridge</a>.</p>
   <!-- <li>Abstract deadline: 14 October 2016</li> -->
   <!-- <li>Submission deadline: 21 October 2016</li> -->
   <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
+    IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
+    (General Chair)
+  <ul>
+  <!-- <li>Submission deadline: 4 August 2016</li> -->
+  <li>Conference: 26-28 April 2017, Paris, France</li>
   </ul>
   </li>
 
