--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ MPRI website</a>.</p>
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
-    <b><a href="">The Meaning of Memory Safety</a></b>.
-            May 2017.
+    <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
+            arXiv:1705.07354, May 2017.
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
