--- a/publications.html
+++ b/publications.html
@@ -91,6 +91,23 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="7" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Karthikeyan Bhargavan,
+    Antoine Delignat-Lavaud,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    Peng Wang,
+    Santiago Zanella-Béguelin, and
+    Jean-Karim Zinzindohoué.
+    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
+    In 22nd ACM SIGPLAN International Conference on
+    Functional Programming (ICFP), September 2017. To appear.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Danel Ahman,
     C&#259;t&#259;lin Hri&#355;cu,
     Kenji Maillard,
@@ -336,6 +353,18 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="25" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Arthur Azevedo de Amorim,
+            C&#259;t&#259;lin Hri&#355;cu, and
+            Benjamin C. Pierce.<br/>
+    <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
+            arXiv:1705.07354, May 2017.
+  <ul style="font-size: small">
+    <li>A previous draft was entitled
+        Alpha is for Address! The Essence of Memory Safety</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Niklas Grimm,
     Kenji Maillard,
     Cédric Fournet,
@@ -347,22 +376,6 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Santiago Zanella-Béguelin.
     <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
     arXiv:1703.00055, February 2017.
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Karthikeyan Bhargavan,
-    Antoine Delignat-Lavaud,
-    Cédric Fournet,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Jonathan Protzenko,
-    Tahina Ramananandro,
-    Aseem Rastogi,
-    Nikhil Swamy,
-    Peng Wang,
-    Santiago Zanella-Béguelin, and
-    Jean-Karim Zinzindohoué.
-    <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
-    arXiv:1703.00053. February 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
