--- a/publications.html
+++ b/publications.html
@@ -108,6 +108,33 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   </li>
 
   <li style="margin-bottom: 1ex;">
+     Karthikeyan Bhargavan,
+     Barry Bond,
+     Antoine Delignat-Lavaud,
+     Cédric Fournet,
+     Chris Hawblitzel,
+     C&#259;t&#259;lin Hri&#355;cu,
+     Samin Ishtiaq,
+     Markulf Kohlweiss,
+     Rustan Leino,
+     Jay Lorch,
+     Kenji Maillard,
+     Jianyang Pang,
+     Bryan Parno,
+     Jonathan Protzenko,
+     Tahina Ramananandro,
+     Ashay Rane,
+     Aseem Rastogi,
+     Nikhil Swamy,
+     Laure Thompson,
+     Peng Wang,
+     Santiago Zanella-Béguelin, and
+     Jean-Karim Zinzindohoué.
+    <b><a href="http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf">Everest: Towards a Verified, Drop-in Replacement of HTTPS</a></b>.
+    2nd Summit on Advances in Programming Languages (SNAPL), May 2017.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Danel Ahman,
     C&#259;t&#259;lin Hri&#355;cu,
     Kenji Maillard,
