--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
 C. Pierce</a>.
-In October and November 2016 I held a Visiting Researcher position at
+In the fall of 2016 I held a Visiting Researcher position at
 <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a>.</p>
 
 <p style="width:42em; text-align: left"> I received my PhD
