--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ University</a> in Saarbrücken, Germany, where I
 the <a href="http://www.infsec.cs.uni-saarland.de/">Information
 Security and Cryptography Group</a> and
 -->
-held fellowships
+was supported by fellowships
 from the <a href="http://www.imprs-cs.de/">International Max Planck
 Research School for Computer Science (IMPRS-CS)</a>
 and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-cambridge/">Microsoft
