--- a/index.html
+++ b/index.html
@@ -519,6 +519,15 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
+
+    <ul style="font-size: small">
+      <li><b>Upcoming</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a> <!--: <a href="talks/">slides</a> --> (2017-06-21)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
+    </ul>
+
+  </li>
+
   <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
 
     <ul style="font-size: small">
