--- a/talks.html
+++ b/talks.html
@@ -24,11 +24,31 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Recent:</b> <em>Efficient Formally Secure Compilers
-to a Tagged Architecture</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
 
     <ul style="font-size: small">
-      <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a> (2016-09-02)</li>
+      <li><b>Upcoming</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a> <!--: <a href="talks/">slides</a> --> (2017-06-21)</li>
+      <li><b>Upcoming</b>: <a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
+
+    <ul style="font-size: small">
+      <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
+      <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
+      <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
+      <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
+      <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li>
       <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li>
       <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
@@ -39,7 +59,7 @@ to a Tagged Architecture</em></a>
   <li style="margin-bottom: 1ex"><em>Dependent Types and Multi-Monadic Effects in F*</em>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
+      <li><a href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=16131">Dagstuhl Seminar 16131 on<br/>
           Language Based Verification Tools for Functional Programs</a>:
           <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
       </li>
