--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">SECOMP ERC Grant on
                                         Efficient Formally Secure Compilers to a Tagged Architecture</a></b>
     <ul>
-      <li style="margin-top: 1ex"><b><a href="https://secure-compilation.github.io/#positions">Open positions</a>:</b>
-      Always looking for outstanding students and young researchers for
+      <li style="margin-top: 1ex">
+      Always <a href="https://secure-compilation.github.io/#positions">looking for outstanding students and young researchers</a> for
       Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris</li>
     </ul>
   </li>
