--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ Research Cambridge</a>.</p>
                                         Efficient Formally Secure Compilers to a Tagged Architecture</a></b>
     <ul>
       <li style="margin-top: 1ex">
-      Always <a href="https://secure-compilation.github.io/#positions">looking for outstanding students and young researchers</a> for
-      Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris</li>
+      Always <a href="https://secure-compilation.github.io/#positions">looking for outstanding students and young researchers</a>
+      <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
     </ul>
   </li>
 
