--- a/index.html
+++ b/index.html
@@ -528,6 +528,14 @@ MPRI website</a>.</p>
 
   </li>
 
+  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> 
+
+    <ul style="font-size: small">
+      <li>Talk at <a href="https://www.france-science.org/-FADEx-.html">French-American Doctoral Exchange Program (FADEx)</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
+    </ul>
+
+  </li>
+
   <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
 
     <ul style="font-size: small">
