--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> 
 
     <ul style="font-size: small">
-      <li>Talk at <a href="https://www.france-science.org/-FADEx-.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
+      <li><a href="https://www.france-science.org/-FADEx-.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
     </ul>
 
   </li>
