--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
+  <ul>
+  <!-- <li>Abstract deadline: 14 October 2016</li> -->
+  <!-- <li>Submission deadline: 21 October 2016</li> -->
+  <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
     Principles of Programming Languages, POPL 2017</a>
     (PC member)
@@ -121,14 +129,6 @@ Research Cambridge</a>.</p>
   <!-- <li>Conference: 23-29 April 2017, Uppsala, Sweden</li> -->
   <!-- </ul> -->
   <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
-  <ul>
-  <!-- <li>Abstract deadline: 14 October 2016</li> -->
-  <!-- <li>Submission deadline: 21 October 2016</li> -->
-  <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
-  </ul>
-  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ieee-security.org/TC/EuroSP2017/">
     IEEE European Symposium on Security and Privacy, EuroS&amp;P 2017</a>
