--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
 
     <ul style="font-size: small">
-      <li><b>Upcoming</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a> <!--: <a href="talks/">slides</a> --> (2017-06-21)</li>
-      <li><b>Upcoming</b>: <a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
+      <li><b>Recent</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
     </ul>
 
   </li>
