--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ MPRI website</a>.</p>
 
     <ul style="font-size: small">
       <li><b>Recent</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
   </li>
