--- a/index.html
+++ b/index.html
@@ -402,17 +402,17 @@ MPRI website</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;">
-    Karthikeyan Bhargavan,
-    Antoine Delignat-Lavaud,
-    Cédric Fournet,
-    C&#259;t&#259;lin Hri&#355;cu,
     Jonathan Protzenko,
-    Tahina Ramananandro,
+    Jean-Karim Zinzindohoué,
     Aseem Rastogi,
-    Nikhil Swamy,
+    Tahina Ramananandro,
     Peng Wang,
-    Santiago Zanella-Béguelin, and
-    Jean-Karim Zinzindohoué.
+    Santiago Zanella-Béguelin,
+    Antoine Delignat-Lavaud,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Karthikeyan Bhargavan,
+    Cédric Fournet,
+    Nikhil Swamy,
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
     In 22nd ACM SIGPLAN International Conference on
     Functional Programming (ICFP), September 2017. To appear.
