--- a/publications.html
+++ b/publications.html
@@ -91,17 +91,17 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="7" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    Karthikeyan Bhargavan,
-    Antoine Delignat-Lavaud,
-    Cédric Fournet,
-    C&#259;t&#259;lin Hri&#355;cu,
     Jonathan Protzenko,
-    Tahina Ramananandro,
+    Jean-Karim Zinzindohoué,
     Aseem Rastogi,
-    Nikhil Swamy,
+    Tahina Ramananandro,
     Peng Wang,
-    Santiago Zanella-Béguelin, and
-    Jean-Karim Zinzindohoué.
+    Santiago Zanella-Béguelin,
+    Antoine Delignat-Lavaud,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Karthikeyan Bhargavan,
+    Cédric Fournet,
+    Nikhil Swamy,
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
     In 22nd ACM SIGPLAN International Conference on
     Functional Programming (ICFP), September 2017. To appear.
