--- a/index.html
+++ b/index.html
@@ -81,15 +81,9 @@ Research Cambridge</a>.</p>
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</b></a> (Invited Speaker)
+  <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/POPL-2018-Workshops">Principles of Secure Compilation (PriSC) at POPL 2018</b></a> (PC Chair)
   <ul>
-  <li>Conference: June 19-21 2017, University of Kent, Canterbury, UK</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
-  <ul>
-  <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
+  <li>Workshop: January 18, 2018, Los Angeles, USA</li>
   </ul>
   </li>
 
@@ -103,11 +97,23 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
+  <ul>
+  <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
   <ul>
   <!-- <li>Abstract deadline: 14 October 2016</li> -->
   <!-- <li>Submission deadline: 21 October 2016</li> -->
   <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker)
+  <ul>
+  <li>Conference: June 19-21 2017, University of Kent, Canterbury, UK</li>
   </ul>
   </li>
 
