--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ Research Cambridge</a>.</p>
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/POPL-2018-Workshops">Principles of Secure Compilation (PriSC) at POPL 2018</b></a> (PC Chair)
+  <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/POPL-2018-Workshops">Principles of Secure Compilation (PriSC)</b></a> (PC Chair)
   <ul>
-  <li>Workshop: January 18, 2018, Los Angeles, USA</li>
+  <li>Workshop at POPL: January 18, 2018, Los Angeles, USA</li>
   </ul>
   </li>
 
