--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/POPL-2018-Workshops">Principles of Secure Compilation (PriSC)</b></a> (PC Chair)
   <ul>
+  <!-- <li>Submission deadline: 7 July 2017</li> -->
   <li>Workshop at POPL: January 18, 2018, Los Angeles, USA</li>
   </ul>
   </li>
