--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting at POPL 2017</a> (Co-organizer)
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting</a> (Co-organizer)
   <ul>
-  <li>Workshop: 15 January 2017, Paris, France</li>
+  <li>Workshop at POPL: 15 January 2017, Paris, France</li>
   </ul>
   </li>
 
