--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting</a> (Co-organizer)
+  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting 2017</a> (Co-organizer)
   <ul>
   <li>Workshop at POPL: 15 January 2017, Paris, France</li>
   </ul>
