--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Research Cambridge</a>.</p>
     (Artifact Evaluation Co-Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <li>Submission deadline: 7 July 2017</li>
+  <!-- <li>Submission deadline: 7 July 2017</li> -->
   <li>Conference: 8-13 January 2018, Los Angeles</li>
   </ul>
   </li>
@@ -100,6 +100,13 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
   <ul>
   <li>Seminar: May 13-18, 2018, Schloss Dagstuhl, Germany</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
+  <ul>
+  <li>Submission deadline: August 15, 2017</li>
+  <li>Conference: April 24-26, 2018, London, United Kingdom</li>
   </ul>
   </li>
 
