--- a/index.html
+++ b/index.html
@@ -402,6 +402,20 @@ MPRI website</a>.</p>
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+@misc{preorders,
+  author = {Danel Ahman and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Kenji Maillard and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Recalling a Witness: Foundations and Applications of Monotonic State},
+  howpublished = {arXiv:1707.02466},
+  url = {https://arxiv.org/abs/1707.02466},
+  year = {2017},
+  month = jul,
+
+
   <li style="margin-bottom: 1ex;">
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
@@ -465,11 +479,12 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Matteo Maffei,
     Jonathan Protzenko,
+    Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy, and
     Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification (Functional Pearl)</a></b>.
-    arXiv:1703.00055, February 2017.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: : Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
+    arXiv:1703.00055, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
