--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;">
             Danel Ahman,
-            C\'edric Fournet,
+            Cédric Fournet,
             C&#259;t&#259;lin Hri&#355;cu,
             Kenji Maillard,
             Aseem Rastogi, and
