--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ MPRI website</a>.</p>
             C&#259;t&#259;lin Hri&#355;cu,
             Kenji Maillard,
             Aseem Rastogi, and
-            Nikhil Swamy.<br/>
+            Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
             arXiv:1707.02466, July 2017.
   <!-- <ul style="font-size: small"> -->
